feat: Enhance SEO and branding in frontend components
- Added canonical link and meta tags for improved SEO in index.html.
- Updated homepage title and description for better branding alignment.
- Enhanced the hero section with a new tagline and description to clarify the service offered.
- Introduced a new CommentaryEditor component for consistent styling in the admin interface.

--- a/loan-army-frontend/index.html
+++ b/loan-army-frontend/index.html
@@ -10,6 +10,19 @@
     <link rel="manifest" href="/assets/loan_army_assets/site.webmanifest" />
     <link rel="icon" type="image/x-icon" href="/assets/loan_army_assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="canonical" href="https://goonloan.com/" />
+    <meta
+      name="description"
+      content="Go On Loan (goonloan.com) tracks European football loan players and delivers AI-powered newsletters so you never miss a prospect's progress."
+    />
+    <meta property="og:title" content="Go On Loan — European Football Loan Tracker" />
+    <meta
+      property="og:description"
+      content="Follow every loan spell in Europe's top leagues and get weekly AI summaries from Go On Loan at goonloan.com."
+    />
+    <meta property="og:url" content="https://goonloan.com/" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
     <title>Go On Loan - European Football Loan Tracker</title>
   </head>
   <body>
